--- a/style.css
+++ b/style.css
@@ -504,7 +504,7 @@ button.collapse:hover, button.collapse.active{
 }
 .lower-footer{
 	width: 100%;
-	height: ;
+	height: 40;
 	color: #fff;
 	font-size: 13px;
 	font-family: Roboto;
